--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,23 @@
     font-family: Roboto;
 }
 
+
 .error-msg{
-    color: red;
-    padding: 10px;
-    font-size: 20px;
+    color:#f50;
+    padding-left:10px;
+    padding-top:10px;
+}
+
+.am-tab-bar{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+.fixd-header.am-navbar{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+.page-content{
+    padding:45px 5px;
 }
